--- a/requirements.txt
+++ b/requirements.txt
@@ -3,30 +3,37 @@ aiogram==3.8.0
 aiohttp==3.9.5
 aiosignal==1.3.1
 annotated-types==0.7.0
+anyio==4.4.0
 APScheduler==3.10.4
 attrs==23.2.0
 blinker==1.8.2
 certifi==2024.6.2
+charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.3
-Flask-SQLAlchemy==3.1.1
 frozenlist==1.4.1
-greenlet==3.0.3
 gunicorn==20.1.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 magic-filter==1.0.12
 MarkupSafe==2.1.5
 multidict==6.0.5
+packaging==24.1
 pydantic==2.7.4
 pydantic_core==2.18.4
 python-dotenv==1.0.1
+python-telegram-bot==21.3
 pytz==2024.1
-setuptools==70.1.0
+requests==2.32.3
+setuptools==70.1.1
 six==1.16.0
-SQLAlchemy==2.0.31
+sniffio==1.3.1
 typing_extensions==4.12.2
 tzlocal==5.2
+urllib3==2.2.2
 Werkzeug==3.0.3
 yarl==1.9.4
